# borosGui

./: .gitignore  .travis.yml  Cargo.toml  README.md  embeed_spec.sh  spec.yml
src/: devices.rs  editor.rs  main.rs  ser.rs
